--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
-    background: url('/images/wallpaper.png') no-repeat center center fixed;
+    background: url('images/wallpaper.png') no-repeat center center fixed;
     background-size: cover;
     position: relative;
     color: white;
